Fix routing bug by putting navigation button behind bar details page

--- a/client/src/components/GoogleMapWithSearch/map.css
+++ b/client/src/components/GoogleMapWithSearch/map.css
@@ -30,7 +30,7 @@
   text-decoration: none;
   text-align: center;
   background-color: rgba(255, 188, 44, 0.945);
-  z-index: 100;
+  z-index: 10;
   -moz-box-shadow: 0px 0px 6px rgb(170, 170, 170);
   -webkit-box-shadow: 0px 0px 6px rgb(170, 170, 170);
   box-shadow: 0px 1px 3px rgb(46, 46, 46);
